# src/swagger/swagger.yaml
@@ -301,3 +301,19 @@ paths:
                 type: array
                 items:
                   type: object
+  /getstatistic:
+    get:
+      tags:
+        - statistic
+      summary: Get all statistic
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successfully fetched
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
